[tool.poetry]
name = "Greenamer"
version = "0.8"
description = "A web app for automatically renaming Strava Activities"
authors = ["Nathan Saritzky <nsaritzky@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1"
WTForms = "^2.2"
WTForms-Components = "^0.10.4"
Flask-SQLAlchemy = "^2.4"
googlemaps = "^3.1"
motionless = "^1.3,<1.3.2"
DateTime = "^4.3"
Flask-Bootstrap = "^3.3"
Flask-CDN = "^1.5"
Flask-Googlemaps = "^0.2.6"
Flask-Login = "^0.4.1"
Flask-Migrate = "^2.5"
stravalib = "~0.10"
flask_wtf = "^0.14.2"
python-dotenv = "^0.10.3"
geopy = "^1.20"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
